--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;">FICHA T&Eacute;CNICA DEL FORMATO &Uacute;NICO DE EXTRACTO DEL CONTRATO - FUEC</span></p>
+	<div style="margin: 20px; padding: 20px;">
+		<p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;">FICHA T&Eacute;CNICA DEL FORMATO &Uacute;NICO DE EXTRACTO DEL CONTRATO - FUEC</span></p>
 
 <p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" style="cursor: pointer; padding: 0px 1px; max-width: 100%; color: rgb(0, 0, 0); font-family: Times New Roman; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; width: 852px;" class="fr-fic fr-dib">&nbsp;</span></p>
 
@@ -744,6 +745,7 @@
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'>
 	<br>
 </p>
+	</div>
 
 </body>
 </html>
