--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;">FICHA T&Eacute;CNICA DEL FORMATO &Uacute;NICO DE EXTRACTO DEL CONTRATO - FUEC</span></p>
+	<div style="margin: 20px; padding: 20px; border: 1px solid black;">
+		<p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;">FICHA T&Eacute;CNICA DEL FORMATO &Uacute;NICO DE EXTRACTO DEL CONTRATO - FUEC</span></p>
 
 <p style="text-align: center;"><span style="font-family: Arial,Helvetica,sans-serif;"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" style="cursor: pointer; padding: 0px 1px; max-width: 100%; color: rgb(0, 0, 0); font-family: Times New Roman; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; width: 852px;" class="fr-fic fr-dib">&nbsp;</span></p>
 
@@ -128,7 +129,7 @@
 
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'><strong><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">CARACTER&Iacute;STICAS DEL VEH&Iacute;CULO</span></strong></p>
 
-<table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse; border: none; margin-right: calc(5%); width: 91%; margin-left: calc(4%);">
+<table cellpadding="0" cellspacing="0" style="border: 1px solid black; border-collapse: collapse; border: none; margin-right: calc(5%); width: 85%; margin-left: calc(4%);">
 	<tbody>
 		<tr>
 			<td style="width: 7.8735%; border: 1pt solid windowtext; padding: 0cm 5.4pt; vertical-align: top;" valign="top" width="20.192307692307693%">
@@ -744,6 +745,7 @@
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'>
 	<br>
 </p>
+	</div>
 
 </body>
 </html>
