--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'><strong><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">VIGENCIA DEL CONTRATO</span></strong></p>
 
-<table cellpadding="0" cellspacing="0" style="border: 1px solid black; border-collapse: collapse; border: none; margin-right: calc(9%); width: 91%;">
+<table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse; border: none; margin-right: calc(9%); width: 91%;">
 	<tbody>
 		<tr>
 			<td style="width: 27.0911%; border: 1pt solid windowtext; padding: 0cm 5.4pt; vertical-align: top; text-align: left;" valign="top" width="25%">
@@ -129,7 +129,7 @@
 
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'><strong><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">CARACTER&Iacute;STICAS DEL VEH&Iacute;CULO</span></strong></p>
 
-<table cellpadding="0" cellspacing="0" style="border: 1px solid black; border-collapse: collapse; border: none; width: 85%;">
+<table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse; border: none; margin-right: calc(5%); width: 91%; margin-left: calc(4%);">
 	<tbody>
 		<tr>
 			<td style="width: 7.8735%; border: 1pt solid windowtext; padding: 0cm 5.4pt; vertical-align: top;" valign="top" width="20.192307692307693%">
@@ -474,7 +474,7 @@
 	<br>
 </p>
 
-<table cellpadding="0" cellspacing="0" style="border: 1px solid black; border-collapse: collapse; border: none; margin-right: calc(6%); width: 94%;">
+<table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse; border: none; margin-right: calc(6%); width: 94%;">
 	<tbody>
 		<tr>
 			<td style="width: 516.9pt;border: 1pt solid windowtext;padding: 0cm 5.4pt;vertical-align: top;" valign="top" width="100%">
@@ -503,7 +503,7 @@
 					<br>
 				</p>
 
-				<table cellpadding="0" cellspacing="0" style="border: 1px solid black; margin-left:35.2pt;border-collapse:collapse;border:none;">
+				<table border="1" cellpadding="0" cellspacing="0" style="margin-left:35.2pt;border-collapse:collapse;border:none;">
 					<tbody>
 						<tr>
 							<td style="width: 40.7679%; border: 1pt solid windowtext; padding: 0cm 5.4pt; vertical-align: top;" valign="top" width="36.97068403908795%">
@@ -745,6 +745,7 @@
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;text-align:center;'>
 	<br>
 </p>
+
 	</div>
 
 </body>
