Maquetado igual al pdf

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		}
 		.formato{
 			text-align: center;
+			width: 100%;
 		}
 
 		.dos{
@@ -70,6 +71,7 @@
 		table{
 			border-collapse: collapse;
 			width: 91%;
+			border: 2px solid !important;
 		}
 
 		table, td, th {
@@ -109,7 +111,7 @@
 		.title{
 			font-weight: 600;
 			font-size: 14px;
-			padding: 1px;
+			padding: 3px;
 			text-align: center;
 		}
 
@@ -127,7 +129,7 @@
 
 		.text{
 			text-align: center;
-			padding: 10px;
+			padding: 18px;
 			font-size: 16px;
 		}
 
@@ -200,11 +202,13 @@
 		hr{
 			width: 90%;
 			text-align: center;
+			color: black;
+			border: 1px solid;
 		}
 	</style>
 </head>
 <body>
-	<div style="width: 30cm;">
+	<div style="width: 29cm;">
 	<section class="uno">
 		<p class="ficha">FICHA TÉCNICA DEL FORTMATO ÚNICO DE EXTRACTO DEL CONTRATO</p>
 		<p class="logos"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" alt=""></p>
