--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 		*{
 			font-family: Arial, Helvetica, sans-serif;
 			font-size: 20px;
+			margin: 0;
+			padding: 0;
 		}
 		.ficha{
 			text-align: center;
+			padding-bottom: 7px;
 		}
 		.logos{
 			text-align: center;
+			padding-bottom: 7px;
 		}
 
 		.logos img{
 			width: 950px;
 			object-fit: scale-down;
+			padding-bottom: 7px;
 		}
 		.formato{
 			text-align: center;
@@ -33,6 +38,7 @@
 		.num{
 			font-weight: 700;
 			text-align: center;
+			font-size: 22px;
 		}
 
 		.tres{
@@ -191,6 +197,7 @@
 
 		.signature_container{
 			text-align: center;
+			padding: 10px;
 		}
 		.signature_container p{
 			padding-bottom: 50px;			
@@ -200,9 +207,12 @@
 
 		hr{
 			width: 90%;
+			padding-left: 10px;
 			text-align: center;
+			display: block;
 			color: black;
 			border: 1px solid;
+			margin-bottom: 5px;
 		}
 	</style>
 </head>
