--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 		.vigencia{
 			font-weight: 700;
 			text-align: center;
+			padding-bottom: 15px;
 		}
 
 		table{
@@ -123,6 +124,8 @@
 		.caracteristicas{
 			font-weight: 700;
 			text-align: center;
+			padding-bottom: 15px;
+			padding-top: 15px;
 		}
 
 		.title{
