Maquetado igual al pdf

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
 		*{
 			font-family: Arial, Helvetica, sans-serif;
-			font-size: 20px;
+			font-size: 22px;
 			margin: 0;
 		}
 
@@ -21,7 +21,7 @@
 		.ficha{
 			text-align: center;
 			padding-bottom: 15px;
-			font-size: 22px;
+			font-size: 20px;
 		}
 		.logos{
 			text-align: center;
@@ -36,7 +36,7 @@
 		.formato{
 			text-align: center;
 			width: 100%;
-			font-size: 22px;
+			font-size: 20px;
 		}
 
 		.dos{
@@ -135,6 +135,11 @@
 			text-align: center;
 		}
 
+		.nums{
+			text-align: center;
+			padding: 10px;
+		}
+
 		.fila-11{
 			width: 13%;
 		}
@@ -161,7 +166,7 @@
 
 		.names{
 			padding: 2px 5px 15px 5px;
-			font-size: 15px;
+			font-size: 12px;
 		}
 
 		.names p{
@@ -171,7 +176,7 @@
 
 		.identification{
 			padding: 2px 5px 15px 5px;
-			font-size: 15px;
+			font-size: 12px;
 		}
 
 		.identification p{
@@ -182,7 +187,7 @@
 		.licencia{
 			width: 20%;
 			padding: 2px 5px 15px 5px;
-			font-size: 15px;
+			font-size: 12px;
 		}
 
 		.licencia p{
@@ -192,7 +197,7 @@
 
 		.vigencia-con{
 			padding: 2px 5px 15px 5px;
-			font-size: 15px;
+			font-size: 12px;
 		}
 
 		.vigencia-con p{
@@ -308,6 +313,10 @@
 				<tr>
 					<td colspan="2" class="title">NÚMERO INTERNO</td>
 					<td colspan="3" class="title">TARJETA DE OPERACIÓN</td>
+				</tr>
+				<tr>
+					<td colspan="2" class="nums">8</td>
+					<td colspan="3" class="nums">295128</td>
 				</tr>
 				<tr>
 					<td class="subtitle">DATOS DEL CONDUCTOR 1</td>
