Maquetado igual al pdf

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		.formato{
 			text-align: center;
 			width: 100%;
-			font-size: 20px;
+			font-size: 19px;
+			padding-right: 15px;
 		}
 
 		.dos{
@@ -237,7 +238,7 @@
 	</style>
 </head>
 <body>
-	<div style="width: 29cm;" class="pagebreak">
+	<div style="width: 28cm;" class="pagebreak">
 	<section class="uno">
 		<p class="ficha">FICHA TÉCNICA DEL FORTMATO ÚNICO DE EXTRACTO DEL CONTRATO</p>
 		<p class="logos"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" alt=""></p>
