Maquetado igual al pdf

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		.ficha{
 			text-align: center;
 			padding-bottom: 15px;
-			font-size: 20px;
+			font-size: 18px;
 		}
 		.logos{
 			text-align: center;
@@ -36,7 +36,7 @@
 		.formato{
 			text-align: center;
 			width: 100%;
-			font-size: 19px;
+			font-size: 20px;
 			padding-right: 15px;
 		}
 
@@ -241,9 +241,9 @@
 <body>
 	<div style="width: 28cm;" class="pagebreak">
 	<section class="uno">
-		<p class="ficha">FICHA TÉCNICA DEL FORTMATO ÚNICO DE EXTRACTO DEL CONTRATO</p>
+		<p class="ficha">FICHA TÉCNICA DEL FORTMATO ÚNICO DE EXTRACTO DEL CONTRATO - FUEC</p>
 		<p class="logos"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" alt=""></p>
-		<p class="formato">FICHA TÉCNICA DEL FORMATO ÚNICO DE EXTRACTO DEL CONTRATO DEL SERVICIO PUBLICO DE TRANSPORTE TERRESTRE AUTOMOTOR ESPECIAL</p>
+		<p class="formato">FORMATO UNICO DE EXTRACTO DEL CONTRATO DEL SERVICIO PUBLICO DE TRANSPORTE TERRESTRE AUTOMOTOR ESPECIAL</p>
 	</section>
 	<section class="dos">
 		<p class="num">No.305009505202283663249</p>
