--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-		*{
+
+		a.value::before {
+			content: "✓";
+			color: red;
+			flex-shrink: 0;
+			font-size: 1rem;
+			font-weight: bold;
+			font-family: system-ui;
+			width: 1.3rem;
+			height: 1.35rem;
+			border-radius: 0.2rem;
+			border: solid 1px var(--cx-color-light);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-inline-end: 0.5rem;
+		}
+		/* *{
 			font-family: Arial, Helvetica, sans-serif;
 			font-size: 22px;
 			margin: 0;
@@ -235,11 +252,12 @@
 			color: black;
 			border: 1px solid;
 			margin-bottom: 5px;
-		}
+		} */
 	</style>
 </head>
 <body>
-	<div style="width: 28cm;" class="pagebreak">
+	<a _ngcontent-serverapp-c291="" routerlink="./" class="value selected ng-star-inserted" ng-reflect-router-link="./" ng-reflect-query-params="[object Object]" ng-reflect-config="[object Object]" role="checkbox" aria-checked="true" href="#" data-cx-focus="0V-20V"><span _ngcontent-serverapp-c291="" aria-hidden="true">0V-20V<span _ngcontent-serverapp-c291="" aria-hidden="true" class="count">2</span></span></a>
+	<!-- <div style="width: 28cm;" class="pagebreak">
 	<section class="uno">
 		<p class="ficha">FICHA TÉCNICA DEL FORTMATO ÚNICO DE EXTRACTO DEL CONTRATO - FUEC</p>
 		<p class="logos"><img src="https://s3-us-east-2.amazonaws.com/beewoimg/fog1663912507216-1663912507216.jpeg" alt=""></p>
@@ -358,7 +376,7 @@
 			</tbody>
 		</table>
 	</section>
-	</div>
+	</div> -->
 
 </body>
 </html>
